@@ -1,7 +1,10 @@
+2003-09-18  Bernhard Held <bernhard@bernhardheld.de>
+	* src/SDCCval.c (valPlus, valMinus): fixed bug #808337
+
 2003-07-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
 
-    * support/librarian/sdcclib.c: Generate correct offsets for libraries with
-    Unix (/n) and DOS (/r/n) line terminations.
+	* support/librarian/sdcclib.c: Generate correct offsets for libraries with
+	Unix (/n) and DOS (/r/n) line terminations.
 
 2003-09-17  Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
